add auth type to make generated client code include auth requirement
